# gpu-rr-switcherd

./: .gitignore  CMakeLists.txt  ManualSetupGuide.md  README.md  SetupGuide.md  check-power.sh  gpu-rr-switcherd.service  module-setup.sh  run.sh
packaging/arch/: PKGBUILD
packaging/fedora/: gpu-rr-switcherd.spec
src/: displayManager.cpp  displayManager.h  gpuManager.cpp  gpuManager.h  main.cpp  powerMonitor.cpp  powerMonitor.h
